k8s/azure-flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
    spec:
      containers:
      - name: flask
        image: carichungs/flask-backend
        ports:
        - containerPort: 5000
