k8s/flask-service.yaml
# Service = makes the backend reachable inside the cluster
# this file tell k8s when someone come in port 80, forward to the container in port 5000


apiVersion: v1
kind: Service
metadata:
  name: flask-service

spec:
  selector:
    app: flask-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000 #this is refer to the flask port

  type: LoadBalancer # was ClusterIP
