k8s/ingress-azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: azure.notes.carichung.com
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
